# Medical-Insurance-Charge-prediction

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci_linter.yaml  linter.yaml
backend_app/: api.py  fetch_kaggle_dataset.py  pipeline.pkl  start_server.sh  train.py
backend_app/config/: config.py  params.yaml
backend_app/ml_workflow/: model_predict.py  model_trainer.py  train.py
backend_app/schemas/: customer.py
frontend_streamlit/: .gitignore  Dockerfile  app.py  pyproject.toml
frontend_streamlit/.elasticbeanstalk/: config.yml
notebooks/: exxploration.ipynb  model_selection.ipynb
src/: api.py  fetch-kaggle.py  notebook.ipynb  script.sh
src/config/: config.py  params.yaml
src/ml_workflow/: model_trainer.py
src/notebooks/: exxploration.ipynb  model_selection.ipynb
src/scripts/: start_server.sh
streamlit_ui/: app.py  pyproject.toml
