[tool.poetry]
name = "medical-insurance-prediction-ml"
version = "0.1.0"
description = ""
authors = ["Erick <edcm.erick@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.103.2"
scikit-learn = "^1.3.1"
feature-engine = "^1.6.2"
kaggle = "^1.5.16"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
seaborn = "^0.13.0"
matplotlib = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
