[tool.ruff]
line-length = 100  # defaults to 88 like black
target-version = "py311"

select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade,
  "B",   # flake8-bugbear
  "I",   # isort
]

[tool.poetry]
name = "medical-insurance-prediction-ml"
version = "0.1.0"
description = "Backend project for Medical Insurance Charges prediction"
authors = ["Erick <mail@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
scikit-learn = "1.3.1"
feature-engine = "^1.6.2"
kaggle = "^1.5.16"
pyyaml = "^6.0.1"
uvicorn = "^0.23.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.25.2"
seaborn = "^0.13.0"
matplotlib = "^3.8.0"
xgboost = "^2.0.0"
ruff = "^0.1.1"
awsebcli = "^3.20.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
