[tool.poetry]
name = "frontend-streamlit"
version = "0.1.0"
description = "Streamlit UI application for Medical Insurance Charges prediction"
authors = ["Erick <mail@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.27.2"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
